--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "grunt-protractor-runner": "^1.1.0",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
+    "grunt-text-replace": "^0.4.0",
     "grunt-usemin": "~2.1.1",
     "grunt-wiredep": "~1.8.0",
     "jit-grunt": "^0.5.0",
