--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "body-parser": "~1.5.0",
+    "body-parser": "1.17.1",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
+    "compression": "1.6.2",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.0.1",
     "errorhandler": "~1.0.0",
@@ -30,7 +30,7 @@
     "socketio-jwt": "^3.0.0"
   },
   "devDependencies": {
-    "connect-livereload": "~0.4.0",
+    "connect-livereload": "0.6.0",
     "grunt": "~0.4.4",
     "grunt-angular-templates": "^0.5.4",
     "grunt-autoprefixer": "~0.7.2",
