--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "body-parser": "1.17.1",
     "composable-middleware": "^0.3.0",
     "compression": "1.6.2",
-    "connect-mongo": "^0.8.1",
+    "connect-mongo": "1.3.2",
     "cookie-parser": "~1.0.1",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
