--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "composable-middleware": "^0.3.0",
     "compression": "1.6.2",
     "connect-mongo": "1.3.2",
-    "cookie-parser": "~1.0.1",
+    "cookie-parser": "1.4.3",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
     "express-jwt": "^3.0.0",
