--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jade": "~1.2.0",
     "jsonwebtoken": "^5.0.0",
     "kerberos": "0.0.22",
-    "lodash": "~2.4.1",
+    "lodash": "4.17.4",
     "method-override": "~1.0.0",
     "mongoose": "~4.0.3",
     "morgan": "~1.0.0",
