--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-jade": "^0.11.0",
-    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
@@ -53,7 +52,6 @@
     "grunt-gitinfo": "^0.1.8",
     "grunt-google-cdn": "~0.4.0",
     "grunt-injector": "~0.5.4",
-    "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
     "grunt-rev": "~0.1.0",
     "grunt-text-replace": "^0.4.0",
@@ -71,9 +69,7 @@
     "node": "6.9.4"
   },
   "scripts": {
-    "start": "node server/app.js",
-    "test": "grunt test",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+    "start": "node server/app.js"
   },
   "private": true
 }
