--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server/app.js",
   "dependencies": {
     "body-parser": "1.17.1",
-    "composable-middleware": "^0.3.0",
+    "composable-middleware": "0.3.0",
     "compression": "1.6.2",
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
@@ -57,7 +57,6 @@
     "grunt-usemin": "~2.1.1",
     "grunt-wiredep": "~1.8.0",
     "jit-grunt": "^0.5.0",
-    "jshint-stylish": "~0.1.5",
     "karma-jade-preprocessor": "0.0.11",
     "requirejs": "~2.1.11",
     "should": "~3.3.1",
