--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "~4.9.0",
     "express-jwt": "^3.0.0",
     "express-session": "~1.0.2",
-    "jade": "~1.2.0",
+    "jade": "1.11.0",
     "jsonwebtoken": "^5.0.0",
     "kerberos": "0.0.22",
     "lodash": "4.17.4",
