--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jsonwebtoken": "^5.0.0",
     "lodash": "4.17.4",
     "mongoose": "~4.0.3",
-    "morgan": "~1.0.0",
+    "morgan": "1.8.1",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
