--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
-    "serve-favicon": "~2.0.1",
+    "serve-favicon": "2.4.2",
     "socket.io": "1.7.3",
     "socket.io-client": "1.7.3",
     "socketio-jwt": "^3.0.0"
