--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "compression": "1.6.2",
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
-    "express": "~4.9.0",
-    "express-jwt": "^3.0.0",
-    "express-session": "~1.0.2",
+    "express": "4.15.2",
+    "express-jwt": "5.1.0",
+    "express-session": "1.15.2",
     "jade": "1.11.0",
-    "jsonwebtoken": "^5.0.0",
+    "jsonwebtoken": "7.3.0",
     "lodash": "4.17.4",
     "mongoose": "~4.0.3",
     "morgan": "1.8.1",
-    "passport": "~0.2.0",
+    "passport": "0.3.2",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
-    "passport-local": "~0.1.6",
+    "passport-local": "1.0.0",
     "passport-twitter": "latest",
     "serve-favicon": "2.4.2",
     "socket.io": "1.7.3",
     "socket.io-client": "1.7.3",
-    "socketio-jwt": "^3.0.0"
+    "socketio-jwt": "4.5.0"
   },
   "devDependencies": {
     "connect-livereload": "0.6.0",
