--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "mongoose": "~4.0.3",
     "morgan": "1.8.1",
     "passport": "0.3.2",
-    "passport-facebook": "latest",
-    "passport-google-oauth": "latest",
+    "passport-facebook": "2.1.1",
+    "passport-google-oauth": "1.0.0",
     "passport-local": "1.0.0",
-    "passport-twitter": "latest",
+    "passport-twitter": "1.0.4",
     "serve-favicon": "2.4.2",
     "socket.io": "1.7.3",
     "socket.io-client": "1.7.3",
