--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express-session": "1.15.2",
     "jsonwebtoken": "7.3.0",
     "lodash": "4.17.4",
-    "mongoose": "~4.0.3",
+    "mongoose": "4.9.4",
     "morgan": "1.8.1",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
