--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "bluebird": "3.5.0",
     "body-parser": "1.17.1",
     "composable-middleware": "0.3.0",
     "compression": "1.6.2",
