--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "angular-cookies": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-bootstrap": "~2.2.0",
-    "font-awesome": ">=4.1.0",
+    "font-awesome": "4.7.0",
     "lodash": "~4.16.4",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.15"
