Updated the build tools.

--- a/package.json
+++ b/package.json
@@ -27,34 +27,35 @@
     "socketio-jwt": "4.5.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.24.1",
     "connect-livereload": "0.6.0",
     "grunt": "~0.4.4",
-    "grunt-angular-templates": "^0.5.4",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-babel": "~5.0.0",
-    "grunt-build-control": "~0.4.0",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-contrib-less": "^0.11.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-babel": "^6.0.0",
+    "grunt-build-control": "^0.7.1",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.0.0",
+    "grunt-contrib-htmlmin": "^2.3.0",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-uglify": "^2.3.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-env": "~0.4.1",
-    "grunt-express-server": "~0.4.17",
+    "grunt-express-server": "^0.5.3",
     "grunt-gitinfo": "^0.1.8",
     "grunt-google-cdn": "~0.4.0",
-    "grunt-injector": "~0.5.4",
-    "grunt-ng-annotate": "^0.2.3",
+    "grunt-injector": "^1.1.0",
+    "grunt-ng-annotate": "^3.0.0",
     "grunt-rev": "~0.1.0",
     "grunt-text-replace": "^0.4.0",
-    "grunt-usemin": "~2.1.1",
-    "grunt-wiredep": "~1.8.0",
-    "jit-grunt": "^0.5.0",
-    "time-grunt": "~0.3.1"
+    "grunt-usemin": "^3.1.1",
+    "grunt-wiredep": "^3.0.1",
+    "jit-grunt": "^0.10.0",
+    "time-grunt": "^1.4.0"
   },
   "engines": {
     "node": "6.9.4"
