--- a/package.json
+++ b/package.json
@@ -29,33 +29,32 @@
   "devDependencies": {
     "babel-preset-es2015": "6.24.1",
     "connect-livereload": "0.6.0",
-    "grunt": "~0.4.4",
-    "grunt-angular-templates": "^1.1.0",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-babel": "^6.0.0",
-    "grunt-build-control": "^0.7.1",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-htmlmin": "^2.3.0",
-    "grunt-contrib-jade": "^1.0.0",
-    "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-uglify": "^2.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-env": "~0.4.1",
-    "grunt-express-server": "^0.5.3",
-    "grunt-gitinfo": "^0.1.8",
-    "grunt-google-cdn": "~0.4.0",
-    "grunt-injector": "^1.1.0",
-    "grunt-ng-annotate": "^3.0.0",
-    "grunt-rev": "~0.1.0",
-    "grunt-text-replace": "^0.4.0",
-    "grunt-usemin": "^3.1.1",
-    "grunt-wiredep": "^3.0.1",
-    "jit-grunt": "^0.10.0",
-    "time-grunt": "^1.4.0"
+    "grunt": "0.4.5",
+    "grunt-angular-templates": "1.1.0",
+    "grunt-autoprefixer": "3.0.4",
+    "grunt-babel": "6.0.0",
+    "grunt-build-control": "0.7.1",
+    "grunt-concurrent": "2.3.1",
+    "grunt-contrib-clean": "1.1.0",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "2.0.0",
+    "grunt-contrib-htmlmin": "2.3.0",
+    "grunt-contrib-jade": "1.0.0",
+    "grunt-contrib-less": "1.4.1",
+    "grunt-contrib-uglify": "2.3.0",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-env": "0.4.4",
+    "grunt-express-server": "0.5.3",
+    "grunt-gitinfo": "0.1.8",
+    "grunt-injector": "1.1.0",
+    "grunt-ng-annotate": "3.0.0",
+    "grunt-rev": "0.1.0",
+    "grunt-text-replace": "0.4.0",
+    "grunt-usemin": "3.1.1",
+    "grunt-wiredep": "3.0.1",
+    "jit-grunt": "0.10.0",
+    "time-grunt": "1.4.0"
   },
   "engines": {
     "node": "6.9.4"
