--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-cssmin": "2.0.0",
     "grunt-contrib-htmlmin": "2.3.0",
     "grunt-contrib-jade": "1.0.0",
+    "grunt-contrib-jshint": "1.1.0",
     "grunt-contrib-less": "1.4.1",
     "grunt-contrib-uglify": "2.3.0",
     "grunt-contrib-watch": "1.0.0",
@@ -54,6 +55,7 @@
     "grunt-usemin": "3.1.1",
     "grunt-wiredep": "3.0.1",
     "jit-grunt": "0.10.0",
+    "jshint-stylish": "2.2.1",
     "time-grunt": "1.4.0"
   },
   "engines": {
