--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "6.24.1",
+    "chai": "3.5.0",
+    "chai-http": "3.0.0",
     "connect-livereload": "0.6.0",
     "grunt": "1.0.1",
     "grunt-angular-templates": "1.1.0",
@@ -56,13 +58,15 @@
     "grunt-wiredep": "3.0.1",
     "jit-grunt": "0.10.0",
     "jshint-stylish": "2.2.1",
+    "mocha": "3.4.1",
     "time-grunt": "1.4.0"
   },
   "engines": {
     "node": "6.9.4"
   },
   "scripts": {
-    "start": "node server/app.js"
+    "start": "node server/app.js",
+    "test": "mocha -- server/**/*.spec.js"
   },
   "private": true
 }
