Rem bluebird lib (unnecessary). Use ES6 Promises for mongoose.

--- a/server/.jshintrc
+++ b/server/.jshintrc
@@ -13,5 +13,10 @@
   "strict": true,
   "smarttabs": true,
   "asi": true,
-  "debug": true
+  "debug": true,
+  "globals": {
+    "describe": true,
+    "beforeEach": true,
+    "it": true
+  }
 }
