Testing: impl-ed auth.

--- a/server/.jshintrc
+++ b/server/.jshintrc
@@ -16,7 +16,10 @@
   "debug": true,
   "globals": {
     "describe": true,
+    "before": true,
     "beforeEach": true,
+    "afterEach": true,
+    "after": true,
     "it": true
   }
 }
