--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -24,10 +24,13 @@
     "_": true,
     "moment": true,
     "describe": true,
+    "before": true,
     "beforeEach": true,
+    "afterEach": true,
+    "after": true,
+    "it": true,
     "module": true,
     "inject": true,
-    "it": true,
     "expect": true,
     "browser": true,
     "element": true,
