--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "3.5.0",
     "chai-http": "3.0.0",
     "connect-livereload": "0.6.0",
+    "cross-env": "5.0.0",
     "grunt": "1.0.1",
     "grunt-angular-templates": "1.1.0",
     "grunt-autoprefixer": "3.0.4",
@@ -65,7 +66,7 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "test": "mocha -- server/**/*.spec.js"
+    "test": "cross-env NODE_ENV=test mocha -- server/**/*.spec.js"
   },
   "private": true
 }
