--- a/bower.json
+++ b/bower.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.5.8",
-    "bootstrap": "~3.1.1",
+    "bootstrap": "3.1.1",
     "angular-cookies": "1.5.8",
     "angular-sanitize": "1.5.8",
-    "angular-bootstrap": "~2.2.0",
+    "angular-bootstrap": "2.2.0",
     "font-awesome": "4.7.0",
-    "lodash": "~4.16.4",
-    "angular-socket-io": "~0.6.0",
-    "angular-ui-router": "~0.2.15"
+    "lodash": "4.16.6",
+    "angular-socket-io": "0.6.1",
+    "angular-ui-router": "0.2.18"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
