--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "serve-favicon": "2.4.2",
     "socket.io": "1.7.3",
     "socket.io-client": "1.7.3",
-    "socketio-jwt": "4.5.0"
+    "socketio-jwt": "4.5.0",
+    "swagger-tools": "0.10.3",
+    "swagger-ui": "3.4.2",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
