--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "1.6.2",
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
     "express": "4.15.2",
     "express-jwt": "5.1.0",
     "express-session": "1.15.2",
